@@ -1,4 +1,4 @@
-$Id: CHANGES,v 1.241 2004/02/18 16:26:40 stelian Exp $
+$Id: CHANGES,v 1.242 2004/03/01 15:38:10 stelian Exp $
 
 Changes between versions 0.4b35 and 0.4b36 (released ?????????????????)
 =======================================================================
@@ -26,6 +26,8 @@ Changes between versions 0.4b35 and 0.4b36 (released ?????????????????)
 
 6.	Made explicit in the dump man page that dump will not create
 	a remote file, it will only write to an already existing one.
+
+7.	Another try at making size estimates better again.
 
 Changes between versions 0.4b34 and 0.4b35 (released December 21, 2003)
 =======================================================================
